--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<button onclick="location.href = 'www.yoursite.com';" id="myButton" class="float-left submit-button" >Home</button>
+<button onclick="location.href = 'gfh';" id="myButton" class="float-left submit-button" >Home</button>
