--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<button onclick="location.href = 'gfh';" id="myButton" class="float-left submit-button" >Home</button>
+<a href="https://mbc.outspect.dev/">visit the MBC</a>
