--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-<a href="https://mbc.outspect.dev/">visit the MBC</a>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>outspect.dev (the mbc)</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <h1>the MBC - paid menus for free</h1>
+        <button class="btn" onclick="window.location.href='https://discord.gg/moonbuddies'">Discord</button>
+      </header>
+      <main>
+        <h2>Info</h2>
+        <p>Password: outspect</p>
+        <table>
+          <thead>
+            <tr>
+              <th>Menu Name</th>
+              <th>Menu Version</th>
+              <th>Download</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>L_0 Paid Normal Mod Menu</td>
+              <td>V11 Normal Menu</td>
+              <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1101520132280422460/L_0_Paid_Menu_V11_Normal_Menu.zip" target="_blank">Download</a></td>
+            </tr>
+            <tr>
+              <td>L_0 Paid Admin Menu</td>
+              <td>V11 Admin Menu</td>
+              <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1101520132280422460/L_0_Paid_Menu_V11_Normal_Menu.zip" target="_blank">Download</a></td>
+            </tr>
+            <tr>
+              <td>Displyy Paid Mod Menu</td>
+              <td>Latest</td>
+              <td><a href="" target="_blank">Download [Deleted]</a></td>
+            </tr>
+            <tr>
+              <td>Hydrax Paid Mod Menu</td>
+              <td>V1.0</td>
+              <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1101520131143766109/Hydrax_Paid_Menu_V1.0.zip" target="_blank">Download</a></td>
+            </tr>
+            <tr>
+              <td>Niko Paid Mod Menu</td>
+              <td>V3.6</td>
+              <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1101520133018624020/Niko_Paid_Menu_V3.6.zip" target="_blank">Download</a></td>
+            </tr>
+            <tr>
+              <td>Niko Paid Gui</td>
+              <td>V3.6</td>
+              <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1101520132636950558/Niko_Paid_Gui_V3.6.zip" target="_blank">Download</a></td>
+            </tr>
+            <tr>
+              <td>L_0 Paid Mod Menu</td>
+              <td>V10</td>
+              <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1101520131554820176/L_0_Paid_Menu_V10.zip" target="_blank">Download</a></td>
+            </tr>
+            <tr>
+              <td>Project Ziggy Paid Menu</td>
+              <td>V4</td>
+              <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1101790077778133003/Projz1ggyFix.zip" target="_blank">Download</a></td>
+            </tr>
+            <tr>
+              <td>Flux Paid Menu</td>
+              <td>V1</td>
+              <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1101807364719509524/Flux_V1.zip" target="_blank">Download</a></td>
+            </tr>
+            
+          </tbody>
+        </table>
+      </main>
+      <footer>
+        <p>made by eW91ciBtb20=</p>
+      </footer>
+    </div>
+  </body>
+</html>
