--- a/index.html
+++ b/index.html
@@ -69,6 +69,17 @@
               <td>V1</td>
               <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1101807364719509524/Flux_V1.zip" target="_blank">Download</a></td>
             </tr>
+            <tr>
+              <td>Fluid</td>
+              <td>Latest?</td>
+              <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1102554877344886804/Latest_Fluid.zip" target="_blank">Download</a></td>
+            </tr>
+            <tr>
+              <td>Project Eclipse</td>
+              <td>Latest?</td>
+              <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1102554876996767794/Project_Eclipse.zip" target="_blank">Download</a></td>
+            </tr>
+            
             
           </tbody>
         </table>
