--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
               <td>Latest?</td>
               <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1102554876996767794/Project_Eclipse.zip" target="_blank">Download</a></td>
             </tr>
+            <tr>
+              <td>Void Paid Menu</td>
+              <td>Latest?</td>
+              <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1104085382607425657/Void_Paid_Menu.zip" target="_blank">Download</a></td>
+            </tr>
             
             
           </tbody>
