--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
               <td>Latest?</td>
               <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1104085382607425657/Void_Paid_Menu.zip" target="_blank">Download</a></td>
             </tr>
+            <tr>
+              <td>Lenox Paid Menu</td>
+              <td>V5.5 Hotfix</td>
+              <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1104451654608228504/lenox.zip" target="_blank">Download</a></td>
+            </tr>
             
             
           </tbody>
