--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@
               <td>V5.5 Hotfix</td>
               <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1104451654608228504/lenox.zip" target="_blank">Download</a></td>
             </tr>
+            <tr>
+              <td>Lenox Paid Menu</td>
+              <td>V6</td>
+              <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1104507422883709020/LenoxV6.zip" target="_blank">Download</a></td>
+            </tr>
             
             
           </tbody>
