--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
               <td>Latest?</td>
               <td><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Download</a></td>
             </tr>
+            <tr>
+              <td>Tornado Client Paid Menu</td>
+              <td>V1</td>
+              <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1109563092821610506/TornadoClientV1.zip" target="_blank">Download</a></td>
+            </tr>
             
             
           </tbody>
