--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <tr>
               <td>Displyy Paid Mod Menu</td>
               <td>Latest</td>
-              <td><a href="" target="_blank">Download [Deleted]</a></td>
+              <td><a href="" target="_blank">Download</a></td>
             </tr>
             <tr>
               <td>Hydrax Paid Mod Menu</td>
@@ -70,8 +70,8 @@
               <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1101807364719509524/Flux_V1.zip" target="_blank">Download</a></td>
             </tr>
             <tr>
-              <td>Fluid</td>
-              <td>Latest?</td>
+              <td>Fluid Paid Menu</td>
+              <td>Unknown</td>
               <td><a href="https://cdn.discordapp.com/attachments/1094347915981496341/1102554877344886804/Latest_Fluid.zip" target="_blank">Download</a></td>
             </tr>
             <tr>
@@ -110,7 +110,7 @@
         </table>
       </main>
       <footer>
-        <p>made by eW91ciBtb20=</p>
+        <p>made by outspect#0001 - discord.gg/moonbuddies</p>
       </footer>
     </div>
   </body>
