--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
   <div class="container">
     <h1>Moon Shop</h1>
 
+    <div class="big-red-text">Please join https://discord.gg/moonbuddies for updates and more free stuff and ofcourse the paid menu</div>
+
     <h2 id="mbc-section">Products</h2>
     <div class="product-container">
       <div class="product">
